# eskai

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  LICENSE  RAW-DESIGN-FRAMEWORK.md  README.md  REFINED-FRAMEWORK.md  pyproject.toml  requirements.txt  setup.py  setup.py.bak
eskai/: __init__.py
eskai/agents/: __init__.py  analyst.py  base_agent.py  creator.py  executor.py  researcher.py
eskai/cli/: __init__.py  main.py
eskai/core/: __init__.py  eskai_main.py  layer1.py  layer2.py  layer3.py  layer4.py  layer5.py  layer6.py
eskai/providers/: __init__.py  gemini_client.py  groq_client.py  openai_client.py  provider_manager.py
eskai/tools/: __init__.py  data_analysis_tool.py  internet_tool.py  run_code_tool.py  tool_manager.py
eskai/utils/: __init__.py  config.py  logger.py
examples/: advanced_usage.py  analyst_agent_usage.py  basic_usage.py  sample_data.csv
reports/: report_20250818_002613.md  report_20250818_003357.md  report_20250818_003947.md
tests/: conftest.py  test_basic.py
