[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eskai"
version = "0.1.1"
authors = [
    {name = "ESKAI Team", email = "kamyasamuel@eskaen.com"},
]
description = "Evolved Strategic Knowledge and AI Framework - A sophisticated multi-layered AGI framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "agi", "artificial intelligence", "automation", "multi-agent", "framework"]
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "asyncio>=3.4.3",
    "openai>=1.3.0",
    "groq>=0.4.0",
    "google-genai>=0.8.3",
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "pandas>=2.1.3",
    "numpy>=1.25.2",
]
web = [
    "beautifulsoup4>=4.12.2",
    "selenium>=4.15.0",
]

[project.urls]
"Homepage" = "https://github.com/kamyasamuel/eskai"
"Bug Reports" = "https://github.com/kamyasamuel/eskai/issues"
"Source" = "https://github.com/kamyasamuel/eskai"
"Documentation" = "https://docs.eskai.ai"

[project.scripts]
eskai = "eskai.cli.main:cli"

[tool.setuptools]
packages = ["eskai", "eskai.cli", "eskai.core", "eskai.providers", "eskai.utils"]
include-package-data = true

[tool.setuptools.package-data]
eskai = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["eskai"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
